[gd_scene load_steps=5 format=3 uid="uid://xn7rklcn0ehf"]

[ext_resource type="Script" path="res://main.gd" id="1_5v4ly"]
[ext_resource type="PackedScene" uid="uid://vuykbibxj1dj" path="res://start_screen.tscn" id="1_mtn5j"]
[ext_resource type="PackedScene" uid="uid://cq3mp6s63imeu" path="res://end_screen.tscn" id="2_w5u0b"]
[ext_resource type="PackedScene" uid="uid://dbhae44gmn1qh" path="res://level.tscn" id="3_q73ux"]

[node name="Main" type="Node2D"]
script = ExtResource("1_5v4ly")

[node name="StartScreen" parent="." instance=ExtResource("1_mtn5j")]

[node name="EndScreen" parent="." instance=ExtResource("2_w5u0b")]
visible = false

[node name="Level" parent="." instance=ExtResource("3_q73ux")]
visible = false

[connection signal="start_game" from="StartScreen" to="." method="_on_start_screen_start_game"]
[connection signal="exit_game" from="EndScreen" to="." method="_on_end_screen_exit_game"]
[connection signal="restart_game" from="EndScreen" to="." method="_on_end_screen_restart_game"]
